@startuml
class Student {
- String githubHandle
- UrlaubsZeit restUrlaub
- List<UrlaubsEintrag> urlaube
- void urlaubNehmen(Long minuten)
- void urlaubEntfernen(Long minuten)
}

class UrlaubsEintrag {
- LocalDateTime start
- LocalDateTime ende
}

class UrlaubsZeit {
- Long minuten
- void zeitHinzufügen()
- void zeitEntfernen()
}

class Klausur {
- Long id
- LsfId lsfId
- String name
- LocalDateTime start
- LocalDateTime ende
- KlausurTyp typ
- Long dauer()
}
enum KlausurTyp {
ONLINE, PRAESENZ
}
class LsfId {
- int id
- istGueltig()
}

Klausur <-- LsfId
Klausur <-- KlausurTyp
Student <-- UrlaubsEintrag
Student <-- UrlaubsZeit
@enduml